Iniciando tela de menu

--- a/listar.html
+++ b/listar.html
@@ -6,10 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Listar Viagens</title>
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
 
-<body>
-    <div id="retorno">
+<body class="backgroundCinza">
+        <nav class="navbar navbar-dark bg-dark">
+                <!-- Conteúdo do navbar -->
+                <p class="blackg">Lista de Viagens</p>
+            </nav>
+          
+    <div class="retorno" id="retorno">
         <!-- Lista é construida aqui -->
     </div>
 
