--- a/autenticacao.html
+++ b/autenticacao.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="public/css/style.css">
 </head>
 
-<body>
+<body class="backgroundVerde">
 
 
     <div class="col-md-4">
