--- a/listarPorVeiculo.html
+++ b/listarPorVeiculo.html
@@ -19,7 +19,7 @@
           <option selected>Insira Placa do Veículo...</option>
         </select>
         <div class="input-group-append">
-          <button class="btn btn-outline-success" type="button"><i class="fas fa-search"></i></button>
+          <button onchange="criarCards()" class="btn btn-outline-success" type="button"><i class="fas fa-search"></i></button>
         </div>
       </div>
       <div id="retorno">
