--- a/cadastrarUser.html
+++ b/cadastrarUser.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/css/style.css">
 </head>
-<body>
+<body class="backgroundVerde">
     <div class="col-md-4">
 
         <img class="logo" src="public/images/logo.png" alt="">
@@ -29,7 +29,7 @@
         </form>
 
         <!-- <button class="btn btn-lg btn-block btn-primary" id="loginUserButton">Autenticar</button> -->
-        <button class="btn btn-lg btn-block btn-info" id="createUserButton">Criar Nova Conta</button>
+        <button class="btn btn-lg btn-block btn-primary" id="createUserButton">Criar Nova Conta</button>
         <br>
 
     </div>
