--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				      <li><a href="cadastrarUser.html"><i class="fas fa-user-plus"></i></a></li>
 				      <li><a href="listar.html"><i class="fas fa-book-open"></i></a></li>
 				      <li><a href="cadastrarVeiculo.html"><i class="fas fa-ambulance"></i></a></li>
-				      <li><a href="#"><i class="fas fa-car-side"></i></a></li>
+				      <li><a href="listarVeiculos.html"><i class="fas fa-car-side"></i></a></li>
 				     </ul>
 				</div>
 				<div id="cn-overlay" class="cn-overlay"></div>
