--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="">
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -9,7 +9,7 @@
 		<meta name="keywords" content="css transforms, circular navigation, round navigation, circular menu, tutorial" />
 		<meta name="author" content="Sara Soueidan for Codrops" />
 
-		<link rel="stylesheet" type="text/css" href="public/css/nor malize.css" />
+		<link rel="stylesheet" type="text/css" href="public/css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="public/css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="public/css/component1.css" />
 		<link rel="stylesheet" href="public/css/style.css">
@@ -49,8 +49,6 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 			</div>
 		</div><!-- /container -->
 		<script src="public/js/polyfills.js"></script>
-		<script src="public/js/demo1.js"></script>
-		<!-- For the demo ad only -->   
-<script src="http://tympanus.net/codrops/adpacks/demoad.js"></script>
+		<script src="public/js/demo1.js"></script>  
 	</body>
 </html>
