--- a/autenticacao.html
+++ b/autenticacao.html
@@ -18,12 +18,15 @@
 
         <form id="form" class="formAuthentication">
             <div class="form-group">
-                <label for="userInput">Usuário</label>
-                <input type="email" class="form-control" id="userInput" placeholder="Usuário">
+                <label class="labelWhite" for="userInput"><strong>Email</strong></label>
+                <input type="email" class="form-control" id="userInput" placeholder="Email">
             </div>
             <div class="form-group">
-                <label for="passwordInput">Senha</label>
+                <label class="labelWhite" for="passwordInput"><strong>Senha</strong></label>
                 <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
+            </div>
+            <div class="text-center">
+                <a class="redefinirSenha" href="">Esqueceu sua senha?</a>
             </div>
         </form>
 
