--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 	</head>
 	<body>
 		<div>
-			<img class="logo3" src="public/images/logo.png" alt="">
+			<img class="logo3" src="public/images/logoMenor.png" alt="">
 		</div>
 			<div class="component">
 				<!-- Start Nav Structure -->
@@ -39,7 +39,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				    <ul>
 				      <li><a href="#"><i class="far fa-address-card"></i></a></li>
 				      <li><a href="cadastrarUser.html"><i class="fas fa-user-plus"></i></a></li>
-				      <li><a href="listar.html"><i class="fas fa-book-open"></i></a></li>
+				      <li><a href="menuListar.html"><i class="fas fa-book-open"></i></a></li>
 				      <li><a href="cadastrarVeiculo.html"><i class="fas fa-ambulance"></i></a></li>
 				      <li><a href="listarVeiculos.html"><i class="fas fa-car-side"></i></a></li>
 				     </ul>
