--- a/autenticacao.html
+++ b/autenticacao.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Autenticação</title>
+    <title>Autenticação de Usuário</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
@@ -26,7 +26,7 @@
                 <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
             </div>
             <div class="text-center">
-                <a class="redefinirSenha" href="">Esqueceu sua senha?</a>
+                <a class="redefinirSenha" href="redefinirSenha.html">Esqueceu sua senha?</a>
             </div>
         </form>
 
