--- a/redefinirSenha.html
+++ b/redefinirSenha.html
@@ -23,11 +23,13 @@
                 </div>
             </form>
     
-            <button class="btn btn-lg btn-block btn-primary" id="redefinirSenha">Redefinir Senha</button>
+            <button onclick="resetPass()" class="btn btn-lg btn-block btn-primary" id="redefinirSenha">Redefinir Senha</button>
 
             <br>
         </div>
 
+        <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
+        <script src="public/js/firebase.js"></script>
         <script src="public/js/redefinirSenha.js"></script>
 </body>
 </html>
