--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 	</head>
 	<body>
 		<div>
-			<img class="logo3" src="public/images/logoMenor.png" alt="">
+			<img class="logo3" src="public/images/logoIndex.png" alt="">
+			<h4  class="formatText"><strong>SISTEMA DE GERENCIAMENTO</strong></h4>
+			<h4 class="formatText2"><strong>DE FROTAS</strong></h4>
+
 		</div>
 			<div class="component">
 				<!-- Start Nav Structure -->
-				<button class="cn-button" id="cn-button">+</button>
+				<button class="cn-button" id="cn-button"><strong>+</strong></button>
 				<div class="cn-wrapper" id="cn-wrapper">
 				    <ul>
-				      <li><a href="#"><i class="far fa-address-card"></i></a></li>
+				      <li><a href="redefinirSenha.html"><i class="fas fa-key"></i></i></a></li>
 				      <li><a href="cadastrarUser.html"><i class="fas fa-user-plus"></i></a></li>
 				      <li><a href="menuListar.html"><i class="fas fa-book-open"></i></a></li>
 				      <li><a href="cadastrarVeiculo.html"><i class="fas fa-ambulance"></i></a></li>
