Alterando cores da logo (falta implementar sobre e listarViagensPorData)

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 	<body>
 		<div>
 			<img class="logo3" src="public/images/logoIndex.png" alt="">
-			<h4  class="formatText"><strong>SISTEMA DE GERENCIAMENTO</strong></h4>
-			<h4 class="formatText2"><strong>DE FROTAS</strong></h4>
+			<h4  class="textoBranco formatText"><strong>SISTEMA DE GERENCIAMENTO</strong></h4>
+			<h4 class="textoBranco formatText2"><strong>DE FROTAS</strong></h4>
 
 		</div>
 			<div class="component">
@@ -40,7 +40,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<button class="cn-button" id="cn-button"><strong>+</strong></button>
 				<div class="cn-wrapper" id="cn-wrapper">
 				    <ul>
-				      <li><a href="redefinirSenha.html"><i class="fas fa-key"></i></i></a></li>
+				      <li><a href=""><i class="fas fa-info-circle"></i></a></li>
 				      <li><a href="cadastrarUser.html"><i class="fas fa-user-plus"></i></a></li>
 				      <li><a href="menuListar.html"><i class="fas fa-book-open"></i></a></li>
 				      <li><a href="cadastrarVeiculo.html"><i class="fas fa-ambulance"></i></a></li>
