--- a/autenticacao.html
+++ b/autenticacao.html
@@ -18,11 +18,11 @@
 
         <form id="form" class="formAuthentication">
             <div class="form-group">
-                <label class="labelWhite" for="userInput"><strong>Email</strong></label>
+                <label class="textoBranco" for="userInput"><strong>Email</strong></label>
                 <input type="email" class="form-control" id="userInput" placeholder="Email">
             </div>
             <div class="form-group">
-                <label class="labelWhite" for="passwordInput"><strong>Senha</strong></label>
+                <label class="textoBranco" for="passwordInput"><strong>Senha</strong></label>
                 <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
             </div>
             <div class="text-center">
