--- a/cadastrarUser.html
+++ b/cadastrarUser.html
@@ -15,15 +15,15 @@
 
         <form id="form" class="formAuthentication">
             <div class="form-group">
-                <label for="emailInput"><strong>Email</strong></label>
+                <label class="textoBranco" for="emailInput"><strong>Email</strong></label>
                 <input type="email" class="form-control" id="emailInput" placeholder="Email">
             </div>
             <div class="form-group">
-                <label for="passwordInput"><strong>Senha</strong></label>
+                <label class="textoBranco" for="passwordInput"><strong>Senha</strong></label>
                 <input type="password" class="form-control" id="passwordInput" placeholder="Senha">
             </div>
             <div class="form-group">
-                <label for="passwordInput2"><strong>Confirme Senha</strong></label>
+                <label class="textoBranco" for="passwordInput2"><strong>Confirme Senha</strong></label>
                 <input type="password" class="form-control" id="passwordInput2" placeholder="Senha">
             </div>
         </form>
