--- a/menuListar.html
+++ b/menuListar.html
@@ -27,7 +27,8 @@
                 <a href="listarPorVeiculo.html"><button type="button" class="botao btn btn-primary">Listar Viagens por Veículo</button></a>
         </div>
         <div class="text-center">
-            <button type="button" class="botao btn btn-primary">Listar Viagens por Data</button>
+            <!-- <button type="button" class="botao btn btn-primary">Listar Viagens por Data</button> -->
+            <a href="listarPorData.html"><button type="button" class="botao btn btn-primary">Listar Viagens por Data</button></a>
         </div>
     </div>
 
