--- a/autenticacao.html
+++ b/autenticacao.html
@@ -42,7 +42,8 @@
     <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase.js"></script>
     <script src="public/js/firebase.js"></script>
     <script src="public/js/autenticacao.js"></script>
-
+    <script src="sw.js"></script>
+    <script src="serviceworker.js"></script>
 </body>
 
 </html>
