--- a/autenticacao.html
+++ b/autenticacao.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="public/css/bootstrap.min.css">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body class="backgroundVerde">
