Corrigindo posicao logo do index novamente

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 	</head>
 	<body>
 		<div>
-			<img class="logo3" src="public/images/logoIndex.png" alt="">
+			<img class="logo3" src="public/images/logo.png" alt="">
 			<h4  class="textoBranco formatText"><strong>SISTEMA DE GERENCIAMENTO</strong></h4>
 			<h4 class="textoBranco formatText2"><strong>DE FROTAS</strong></h4>
 
