Testando Placeholder em listarPorData

--- a/listarPorData.html
+++ b/listarPorData.html
@@ -18,7 +18,7 @@
         <p class="blackg">Viagens por Data</p>
     </nav>
     <div class="input-group">
-        <input id="viagensData" class="form-control" type="date">
+        <input placeholder="Data" id="viagensData" class="form-control" type="date">
     </div>
     
     <div class="retorno" id="return">
