adicionando botao em listarPorData

--- a/listarPorData.html
+++ b/listarPorData.html
@@ -18,9 +18,10 @@
         <p class="blackg">Viagens por Data</p>
     </nav>
     <div class="input-group">
-        <input placeholder="Data" id="viagensData" class="form-control" type="date">
+        
+        <button class="col-12 btn btn-success" type="button"><i class="fas fa-calendar"></i><input placeholder="Data" id="viagensData" class="form-control" type="date"></button>
     </div>
-    
+        </div>
     <div class="retorno" id="return">
 
     </div>
