--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<button class="cn-button" id="cn-button"><strong>+</strong></button>
 				<div class="cn-wrapper" id="cn-wrapper">
 				    <ul>
-				      <li><a href=""><i class="fas fa-info-circle"></i></a></li>
+				      <li><a href="sobre.html"><i class="fas fa-info-circle"></i></a></li>
 				      <li><a href="cadastrarUser.html"><i class="fas fa-user-plus"></i></a></li>
 				      <li><a href="menuListar.html"><i class="fas fa-book-open"></i></a></li>
 				      <li><a href="cadastrarVeiculo.html"><i class="fas fa-ambulance"></i></a></li>
